--- a/app/src/main/res/drawable/ic_keyboard_space_bar.xml
+++ b/app/src/main/res/drawable/ic_keyboard_space_bar.xml
@@ -14,7 +14,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
-    <background android:drawable="@drawable/ic_launcher_background" />
-    <foreground android:drawable="@drawable/ic_launcher_foreground" />
-</adaptive-icon>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/ic_keyboard_space_bar_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/ic_keyboard_space_bar_normal" />
+</selector>
