--- a/app/src/main/res/xml/keyboard_popup.xml
+++ b/app/src/main/res/xml/keyboard_popup.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
    Copyright 2021 LiteKite Startup. All rights reserved.
 
@@ -14,7 +13,8 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
-    <background android:drawable="@drawable/ic_launcher_background" />
-    <foreground android:drawable="@drawable/ic_launcher_foreground" />
-</adaptive-icon>
+<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
+    android:keyWidth="@dimen/keyboard_key_width"
+    android:keyHeight="@dimen/keyboard_key_height"
+    android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
+    android:verticalGap="@dimen/keyboard_key_vertical_gap" />
