--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -22,9 +22,9 @@
         <!-- Default height of a key, in pixels or percentage of display width. -->
         <attr name="keyHeight" format="dimension|fraction" />
         <!-- Default horizontal gap between keys. -->
-        <attr name="horizontalGap" format="dimension|fraction" />
+        <attr name="keyHorizontalGap" format="dimension|fraction" />
         <!-- Default vertical gap between rows of keys. -->
-        <attr name="verticalGap" format="dimension|fraction" />
+        <attr name="keyVerticalGap" format="dimension|fraction" />
     </declare-styleable>
 
     <declare-styleable name="Keyboard_Row">
