--- a/app/src/main/res/xml/keyboard_popup.xml
+++ b/app/src/main/res/xml/keyboard_popup.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
    Copyright 2021 LiteKite Startup. All rights reserved.
 
@@ -13,8 +14,8 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keyWidth="@dimen/keyboard_key_width"
-    android:keyHeight="@dimen/keyboard_key_height"
-    android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
-    android:verticalGap="@dimen/keyboard_key_vertical_gap" />
+<Keyboard xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:keyHorizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
+    app:keyHeight="@dimen/keyboard_key_height"
+    app:keyWidth="@dimen/keyboard_key_width"
+    app:keyVerticalGap="@dimen/keyboard_key_vertical_gap" />
