--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -53,6 +53,10 @@
             <flag name="left" value="1" />
             <!-- Key is anchored to the right of the keyboard. -->
             <flag name="right" value="2" />
+            <!-- Key is anchored to the top of the keyboard. -->
+            <flag name="top" value="4" />
+            <!-- Key is anchored to the bottom of the keyboard. -->
+            <flag name="bottom" value="8" />
         </attr>
         <!-- Whether this is a modifier key such as Alt or Shift. -->
         <attr name="isModifier" format="boolean" />
