--- a/app/src/main/res/layout/layout_keyboard_view.xml
+++ b/app/src/main/res/layout/layout_keyboard_view.xml
@@ -18,7 +18,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal|bottom"
-    android:background="?android:attr/colorBackground">
+    android:background="?attr/background">
 
     <com.litekite.ime.widget.KeyboardView
         android:id="@+id/v_keyboard"
