Updated finding touched key index in keyboard

--- a/app/src/main/res/xml/keyboard_qwerty.xml
+++ b/app/src/main/res/xml/keyboard_qwerty.xml
@@ -69,6 +69,7 @@
 
     <Row>
         <Key
+            app:keyEdgeFlags="left"
             app:keyHorizontalGap="@dimen/keyboard_half_key_size"
             app:keyLabel="a"
             app:popupCharacters="@string/alternates_for_a"
