--- a/app/src/main/res/xml/keyboard_symbol.xml
+++ b/app/src/main/res/xml/keyboard_symbol.xml
@@ -86,7 +86,7 @@
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
             app:keyLabel="+" />
         <Key
-            app:codes="@integer/keycode_return"
+            app:codes="@integer/keycode_enter"
             app:keyHorizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
             app:keyIcon="@drawable/ic_keyboard_return" />
     </Row>
