--- a/app/src/main/res/xml/keyboard_symbol.xml
+++ b/app/src/main/res/xml/keyboard_symbol.xml
@@ -16,6 +16,7 @@
 -->
 <Keyboard xmlns:app="http://schemas.android.com/apk/res-auto"
     app:keyHeight="@dimen/keyboard_key_size"
+    app:keyVerticalGap="@dimen/keyboard_key_vertical_gap"
     app:keyWidth="@dimen/keyboard_key_size">
 
     <Row app:rowEdgeFlags="top">
